--- a/notebooks/pynance_task-3.ipynb
+++ b/notebooks/pynance_task-3.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "4cfc4251",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pynance\n",
     "import pandas as pd"
    ]
   },
@@ -4895,22 +4896,6 @@
     "plt.title('Distribution of Daily Returns')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3cf1ad2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eeb67f94",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -4929,7 +4914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
